--- a/src/resources/views/login.hbs
+++ b/src/resources/views/login.hbs
@@ -1,47 +1,167 @@
 <html>
+
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Đăng Nhập Trang Học Giáo Lý</title>
-    <link rel="icon"
-        href='https://hdgmvietnam.com/admin/upload/image/giao-hoi-cong-giao-dan-than-trong-su-mang-giao-duc.jpg'
-        type='image/jpg' , sizes='16x16'>
-    <link rel="stylesheet" href="/css/app.css" />
-    <link rel="stylesheet" href="/vendor/eggy-js/css/eggy.css" />
-    <link rel="stylesheet" href="/vendor/eggy-js/css/progressbar.css" />
-    <link rel="stylesheet" href="/vendor/eggy-js/css/theme.css" />
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <title>Trang đăng nhập học giáo lý</title>
 
 </head>
 
-<body>
-    <div class="cont">
-        <div class="demo">
-            <div class="login">
-                <div class="login__check"></div>
-                <div class="login__form">
-                    <form action='/login' method='POST'>
-                        <div class="login__row">
-                            <svg class="login__icon name svg-icon" viewBox="0 0 20 20">
-                                <path d="M0,20 a10,8 0 0,1 20,0z M10,0 a4,4 0 0,1 0,8 a4,4 0 0,1 0,-8" />
-                            </svg>
-                            <input type="email" class="login__input name" name="email" placeholder="Nhập email" />
-                        </div>
-                        <div class="login__row">
-                            <svg class="login__icon pass svg-icon" viewBox="0 0 20 20">
-                                <path d="M0,20 20,20 20,8 0,8z M10,13 10,16z M4,8 a6,8 0 0,1 12,0" />
-                            </svg>
-                            <input type="password" class="login__input pass" name="password" placeholder="Password" />
-                        </div>
-                        <button type="submit"  class="login__submit">Đăng Nhập</button>
-                    </form>
-                    <p class="login__signup">Không có tài khoản ? &nbsp;<a id="login_DangKi">Đăng Kí</a></p>
-                </div>
-            </div>
-            
-        </div>
+<body style="background-image: linear-gradient(rgb(135, 118, 236), rgb(45, 218, 241)), url();">
+    <div class="main">
+        <p class="sign" align="center">Đăng nhập</p>
+        <form class="form1" action="/login" method="POST">
+            <input class="un" type="email" name="email" align="center" placeholder="Email">
+            <input class="pass" type="password" name="password" align="center" placeholder="Mật khẩu">
+            <button style="margin-left: 125px;" type="submit" align="center" class="submit">Đăng
+                Nhập</button>
+            {{!-- <a class="submit" align="center">Sign in</a> --}}
+            <p class="forgotnnn" align="center"><a href="">Quên mật khẩu?</a>
+                <span><a href="" style="color: red;"> Đăng ký</a></span>
+            </p>
+
+
     </div>
+
 </body>
+
+<style>
+    .main {
+        background-color: #fff;
+        width: 400px;
+        height: 400px;
+        margin: 7em auto;
+        border-radius: 1.5em;
+        box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+    }
+
+    .sign {
+        padding-top: 40px;
+        color: #8c55aa;
+        font-family: 'Ubuntu', sans-serif;
+        font-weight: bold;
+        font-size: 23px;
+    }
+
+    .un {
+        width: 76%;
+        color: #263238;
+        font-weight: 700;
+        font-size: 14px;
+        letter-spacing: 1px;
+        background: rgba(136, 126, 126, 0.04);
+        padding: 10px 20px;
+        border: none;
+        border-radius: 20px;
+        outline: none;
+        box-sizing: border-box;
+        border: 2px solid rgba(0, 0, 0, 0.02);
+        margin-bottom: 50px;
+        margin-left: 46px;
+        text-align: center;
+        margin-bottom: 27px;
+        font-family: 'Ubuntu', sans-serif;
+    }
+
+    form.form1 {
+        padding-top: 40px;
+    }
+
+    .pass {
+        width: 76%;
+        color: #263238;
+        font-weight: 700;
+        font-size: 14px;
+        letter-spacing: 1px;
+        background: rgba(136, 126, 126, 0.04);
+        padding: 10px 20px;
+        border: none;
+        border-radius: 20px;
+        outline: none;
+        box-sizing: border-box;
+        border: 2px solid rgba(0, 0, 0, 0.02);
+        margin-bottom: 50px;
+        margin-left: 46px;
+        text-align: center;
+        margin-bottom: 27px;
+        font-family: 'Ubuntu', sans-serif;
+    }
+
+    .un:focus {
+        border: 2px solid rgba(0, 0, 0, 0.18) !important;
+    }
+
+    .pass:focus {
+        border: 2px solid rgba(0, 0, 0, 0.18) !important;
+    }
+
+    .submit {
+        cursor: pointer;
+        border-radius: 5em;
+        color: #fff;
+        background: linear-gradient(to right, #9c27b0, #e040fb);
+        border: 0;
+        padding-left: 40px;
+        padding-right: 40px;
+        padding-bottom: 10px;
+        padding-top: 10px;
+        font-family: 'Ubuntu', sans-serif;
+        margin-left: 35%;
+        font-size: 13px;
+        box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+    }
+
+    .forgotnnn {
+        text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
+        color: #e1bee7;
+        padding-top: 15px;
+    }
+
+    a {
+        text-shadow: 0px 0px 3px rgba(133, 5, 5, 0.12);
+        color: #15f3ca;
+        text-decoration: none;
+    }
+
+    a:hover {
+        color: #2495f1;
+    }
+
+    span a {
+        color: #f31515;
+    }
+
+    span a:hover {
+        transform: scale(1.3);
+        cursor: pointer;
+    }
+
+    button {
+        text-decoration: none;
+        border: none;
+        background: #ea1548;
+        padding: 12px 30px;
+        border-radius: 30px;
+        color: white;
+        font-weight: bold;
+        font-size: 15px;
+        transition: 0.4s;
+    }
+
+    button:hover {
+        transform: scale(1.3);
+        cursor: pointer;
+    }
+
+    @media (max-width: 600px) {
+        .main {
+            border-radius: 0px;
+        }
+    }
+</style>
+
 </html>
 <script src="/vendor/eggy-js/js/eggy.js"></script>
 <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js'
@@ -49,11 +169,11 @@
     crossorigin='anonymous'></script>
 
 {{#if errors}}
-    <div id="errors" style="visibility: hidden;">{{errors}}</div>
-    {{else}}
-    {{#if success}}
-    <div id="success" style="visibility: hidden;">{{success}}</div>
-    {{/if}}
+<div id="errors" style="visibility: hidden;">{{errors}}</div>
+{{else}}
+{{#if success}}
+<div id="success" style="visibility: hidden;">{{success}}</div>
+{{/if}}
 {{/if}}
 <script>
     var msgError = document.getElementById('errors');
