--- a/src/resources/views/competition/detail.hbs
+++ b/src/resources/views/competition/detail.hbs
@@ -13,6 +13,7 @@
                                 </div>
                             {{/each}}
                         </div>
+                        <img src="https://i.pinimg.com/originals/38/e7/16/38e71667c520b0b79eb58ee5365c9525.jpg" width="300px" height="300px" style="border-radius: 50%;" alt="">
                         <div class="d-flex align-items-center">
                             <button class="d-flex align-items-center btn btn-primary" id="btn-start">
                                 <ion-icon class="fs-4 md hydrated" name="play" role="img" aria-label="play"></ion-icon>
@@ -27,6 +28,7 @@
                                 <span class="ms-2">Rời phòng</span>
                             </button>
                         </div>
+
                     </div>
                     {{#each room}}
                     <input type="text" id="roomId" value="{{this.roomName}}" hidden>
