--- a/src/resources/views/exercises/create.hbs
+++ b/src/resources/views/exercises/create.hbs
@@ -102,7 +102,7 @@
                     </div>
                     <div class="form-group row">
                         <div class="col-sm-4">
-                            <select class="selectpicker show-tick border-0" name='ceID' data-style="btn-outline-light" data-width="100%" required >
+                            <select class="selectpicker show-tick border-0" name='ceID' data-style="btn-outline-light" data-width="100%" >
                                 <option value="" class="selected">--Chọn loại câu hỏi--</option> 
                                 {{#each categories}}
                                     <option value="{{this._id}}">{{this.type}}</option>
