--- a/src/resources/views/login.hbs
+++ b/src/resources/views/login.hbs
@@ -13,7 +13,7 @@
     <div class="main">
         <p class="sign" align="center">Đăng nhập</p>
         <form class="form1" action="/login" method="POST">
-            <input class="un" type="email" name="email" align="center" placeholder="Email">
+            <input class="un" type="email" name="email" align="center" placeholder="Nhập Email">
             <input class="pass" type="password" name="password" align="center" placeholder="Mật khẩu">
             <button style="margin-left: 125px;" type="submit" align="center" class="submit">Đăng
                 Nhập</button>
