--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -3,7 +3,7 @@
         <a href="/">
             <img src="https://hdgmvietnam.com/admin/upload/image/giao-hoi-cong-giao-dan-than-trong-su-mang-giao-duc.jpg"
                 alt="logo"
-                style="width: 30px;height: 30px;margin-bottom: 20px;"
+                style="width: 50px;height: 50px;margin-bottom: 20px; border-radius:50%;"
                 >
         </a>
 
