--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -103,7 +103,7 @@ div.dataTables_wrapper div.dataTables_filter input {
 @import './main';
 @import "./button";
 
-@import "./login";
+// @import "./login";
 
 
 @import "./reset";
