--- a/src/resources/views/admin.hbs
+++ b/src/resources/views/admin.hbs
@@ -121,9 +121,9 @@
     <!-- ================= New Customers ================ -->
     <div class="recentCustomers">
         <div class="cardHeader">
-            <h2>Người Đang Hoạt Động
+            {{!-- <h2>Người Đang Hoạt Động
                 
-            </h2>
+            </h2> --}}
             
         </div>
     </div>
