--- a/src/resources/views/index.hbs
+++ b/src/resources/views/index.hbs
@@ -3,26 +3,26 @@
     <div class="slick__slider">
       <div class="carousel slide" id="carouselBannerCaptions" data-bs-ride="carousel">
         <div class="carousel-indicators">
-          <button class="" type="button" data-bs-target="#carouselBannerCaptions" data-bs-slide-to="0"
+          {{!-- <button class="" type="button" data-bs-target="#carouselBannerCaptions" data-bs-slide-to="0"
             aria-label="Slide 1"></button>
             
-          <button type="button" data-bs-target="#carouselBannerCaptions" data-bs-slide-to="1" aria-label="Slide 2"
-            class="active" aria-current="true"></button>''
+            <button type="button" data-bs-target="#carouselBannerCaptions" data-bs-slide-to="1" aria-label="Slide 2"
+            class="active" aria-current="true"></button> 
+            --}}
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active">
+          {{!-- <div class="carousel-item active">
             <div class="carousel-caption d-none d-md-block text-start">
             </div>
             <div class="carousel-banner">
               <img class="w-100" src="https://tnttgpphucuong.org/wp-content/uploads/2019/10/Untitled-2-1.png" alt="...">
             </div>
-          </div>
+          </div> --}}
           <div class="carousel-item active">
-            <div class="carousel-caption d-none d-md-block text-start">
-            </div>
+
             <div class="carousel-banner">
               <img class="w-100"
-                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQnpzJpyultdzGIZM3B0jyX8B6TWFQBsoIfWaARU4clpyvVgbzCOLWsWrMoGwljccZ5jQ&usqp=CAU"
+                src="https://tranhtreotuongamia.com/wp-content/uploads/2020/04/tranh-cong-giao-chua-jesu-dang-ngoi-treo-tuong-518224309.jpg"
                 alt="...">
             </div>
           </div>
@@ -43,7 +43,6 @@
 </div>
 
 <div class="section__list">
-
   <div>
     <h4 style="margin-top: 50px; margin-bottom: -10px; font-weight: 500;">Danh Sách Lớp Học</h4>
   </div>
@@ -92,7 +91,6 @@
                   <hr>
                   <div class="btns" style="align-items: center; margin-bottom: 10px; margin-left: 12%">
                     <a href="/subjects/theory/{{this.slug}}" class="btn btn-success" style="margin-right:20px">
-                      
                       Lý Thuyết
                     </a>
                     <a href="/subjects/bible/{{this.slug}}" class="btn btn-success"> Kinh</a>
@@ -111,7 +109,7 @@
         <div class="title__container d-flex align-items-center justify-content-between mb-4">
           <h3 class="fw-bold mb-0">Lớp Căn Bản</h3>
           <a class="d-flex align-items-center text-primary" href="/subjects">
-            {{!-- <span>Xem tất cả</span> --}}
+            <span>Xem tất cả</span>
             <ion-icon class="right md hydrated" name="chevron-forward-outline" role="img"
               aria-label="chevron forward outline"></ion-icon>
           </a>
@@ -154,7 +152,7 @@
         <div class="title__container d-flex align-items-center justify-content-between mb-4">
           <h3 class="fw-bold mb-0">Lớp Kinh Thánh</h3>
           <a class="d-flex align-items-center text-primary" href="/subjects">
-            {{!-- <span>Xem tất cả</span> --}}
+            <span>Xem tất cả</span>
             <ion-icon class="right md hydrated" name="chevron-forward-outline" role="img"
               aria-label="chevron forward outline"></ion-icon>
           </a>
@@ -197,7 +195,7 @@
         <div class="title__container d-flex align-items-center justify-content-between mb-4">
           <h3 class="fw-bold mb-0" style="text-align: center;">Lớp Vào Đời</h3>
           <a class="d-flex align-items-center text-primary" href="/subjects">
-            {{!-- <span>Xem tất cả</span> --}}
+            <span>Xem tất cả</span>
             <ion-icon class="right md hydrated" name="chevron-forward-outline" role="img"
               aria-label="chevron forward outline"></ion-icon>
           </a>
